--- a/Clase 10/Entregable/Pug/views/pages/index.pug
+++ b/Clase 10/Entregable/Pug/views/pages/index.pug
@@ -2,6 +2,7 @@ html
     head 
         link(rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
+        title Formulario de ingreso de productos pug
         style
             include style.css
     body 
