--- a/Clase 22/Entregable/Entregable/views/pages/index.ejs
+++ b/Clase 22/Entregable/Entregable/views/pages/index.ejs
@@ -40,6 +40,21 @@
         <div class="ChatMsgs">
 
         </div>
+
+
+        <div class="Subcontai2ner">
+            <h2>Productos random (FAKER.JS)</h2>
+            <table class="table table-dark">
+                <thead>
+                <tr>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Imagen</th>
+                </tr>
+                </thead>
+                <tbody id="element"></tbody>
+            </table>
+        </div>
  
     <script src="./main.js"></script>
     <script src="./ejs.js"></script>
