--- a/Clase 32/Entregable/views/pages/index.ejs
+++ b/Clase 32/Entregable/views/pages/index.ejs
@@ -86,7 +86,7 @@
             </table>
         </div>
  
-    <script src="../main.js"></script>
-    <script src="../ejs.js"></script>
+    <script src="main.js"></script>
+    <script src="ejs.js"></script>
 </body>
 </html>
